<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.jeiker.intent1.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_home"/>

    <Button
        android:id="@+id/btn_go_baidu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_baidu"/>

    <Button
        android:id="@+id/btn_go_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_phone"/>

    <Button
        android:id="@+id/btn_send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_message"/>

    <Button
        android:id="@+id/btn_send_image_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_image_message"/>

    <Button
        android:id="@+id/btn_go_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_map"/>

    <Button
        android:id="@+id/btn_record_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_record_sound"/>

    <Button
        android:id="@+id/btn_go_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_settings"/>

</LinearLayout>
